Small alignement fix in sponsor badge

--- a/docroot/profiles/drupalaton_profile/themes/drupalaton_theme/sass/base/elements/_sponsor.scss
+++ b/docroot/profiles/drupalaton_profile/themes/drupalaton_theme/sass/base/elements/_sponsor.scss
@@ -117,7 +117,7 @@
 
 .pack-status {
   color: #fff;
-  margin: 22px 0 0 0;
+  margin: 28px 0 0;
   font-size: 18px;
   font-weight: 500;
 }
